# clover

./: .gitignore  Cargo.toml  README.md  libcage.c  main.ll  std.c  test.cg  test.mg  test2.mg
examples/: array.clover  factorial.clover  hash.clover  point.cg  point.clover  point2.cg  point2.clover  refer.clover  select.clover  sizeof.clover  slice.clover  static-link.clover  std.c  test_str.clover  union.clover
src/: codegen.rs  interpreter.rs  lib.rs  libcage.c  libclover.c  mage.rs  main.rs  parser.rs  symbol.rs
