[package]
name = "clover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.28", features = ["derive"] }
lazy_static = "1.5.0"
nom = "7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
mage = { git = "https://github.com/adam-mcdaniel/mage.git" }
# mage = { path = "../mage" }
thiserror = "2.0.11"
rustyline = "15.0.0"
crossterm = "0.28.1"
